Fix header grid, z-index, rotate arrow on click

--- a/app/styles/components/header/buy_ticket_button.module.scss
+++ b/app/styles/components/header/buy_ticket_button.module.scss
@@ -2,6 +2,7 @@
 @use './responsive/buy_ticket_button.scss' as r;
 
 .button {
+    position: relative;
     cursor: pointer;
     background-color: #f9c84a;
     color: #0d2b57 !important;
@@ -15,6 +16,7 @@
     letter-spacing: 1px;
     font-weight: 500;
     font-size: 14px;
+    z-index: 3;
     &:hover {
         background-color: #e9b01d;
     }
