--- a/app/styles/components/header/header.module.scss
+++ b/app/styles/components/header/header.module.scss
@@ -68,7 +68,7 @@
         position: relative;
         top: 0;
         left: 0;
-        z-index: 1;
+        z-index: 9;
         padding: 0px 75px;
         display: grid;
         grid-template-columns: v.$logo_width v.$schedule_width 1fr v.$ticketsButton_width v.$searchButton_width 1px;
