--- a/app/styles/components/header/responsive/header.scss
+++ b/app/styles/components/header/responsive/header.scss
@@ -13,6 +13,8 @@
         }
         @include media("<w1200") {
             grid-template-columns: header-1200(grid-template-columns);
+            padding: header-1200(padding);
+            background-color: #0d2b57;
         }
         // @include media(">=w760", "<w1280") {
         //     height: header-1280(height);
